--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,42 +3,20 @@
     package="com.example.warehouseapp">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WareHouseApp"
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".activity.ViewUserProfile"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar"></activity>
-        <activity
-            android:name=".activity.ChangePassword"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
-        <activity
-            android:name=".activity.ForgotPassword"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
-        <activity
-            android:name=".activity.OtpVerification"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar"></activity>
-        <activity
-            android:name=".activity.UserRegister"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar"></activity>
-        <activity
-            android:name=".activity.UserLogin"
-            android:theme="@style/Theme.WareHouseApp.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".activity.RegisterPage"
+            android:name=".activity.SplashScreen"
             android:theme="@style/Theme.WareHouseApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,8 +25,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.ViewUserProfile"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
+        <activity
+            android:name=".activity.ChangePassword"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
+        <activity
+            android:name=".activity.ForgotPassword"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
+        <activity
+            android:name=".activity.OtpVerification"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
+        <activity
+            android:name=".activity.UserRegister"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
+        <activity
+            android:name=".activity.UserLogin"
             android:theme="@style/Theme.WareHouseApp.NoActionBar"></activity>
+        <activity
+            android:name=".activity.RegisterPage"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar"></activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/Theme.WareHouseApp.NoActionBar" />
     </application>
 
 </manifest>
