--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.warehouseapp"
+        applicationId "com.kisaanandfactory.warehouseapp"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
